--- a/app-a/src/index.scss
+++ b/app-a/src/index.scss
@@ -19,7 +19,7 @@ code {
 }
 
 .App {
-  width: 800px;
+  width: 100vw;
   min-height: 100vh;
   margin: 0 auto;
 }
@@ -29,6 +29,7 @@ code {
   border-radius: 0;
   border: 2px solid black;
   flex: 1 0;
+  text-align: center;
   cursor: pointer;
 
   &.active {
@@ -50,13 +51,10 @@ code {
   color: red;
 }
 
-.list-holder {
-  padding: 15px 30px;
-}
-
 ul {
   font-size: 14px;
   line-height: 1.5;
+  padding: 15px 30px;
 
   li {
     margin-bottom: 15px;
@@ -72,4 +70,26 @@ h2,
 h4 {
   text-align: center;
   margin-bottom: 10px;
+}
+
+table {
+  max-width: 100%;
+  border-collapse: collapse;
+
+  th {
+    border: 2px solid grey;
+    padding: 5px;
+    font-size: 12px;
+  }
+
+  td {
+    padding: 5px 5px 5px 0;
+    word-wrap: break-word;
+    font-size: 11px;
+    line-height: 1.3;
+  }
+
+  tr:nth-child(2n) {
+    background: lightgray;
+  }
 }
